Fixed single selection mode not showing selected item

--- a/src/app/iq-select2/iq-select2.component.css
+++ b/src/app/iq-select2/iq-select2.component.css
@@ -3,7 +3,7 @@
     width: 100%;
 }
 
-.select2-container.readonly input, .select2-container.readonly ul {
+.select2-container.readonly ul {
     background: #eee;
     cursor: not-allowed;
 }
